--- a/server/mails/activation-mail.ejs
+++ b/server/mails/activation-mail.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
+    <meta http-equiv="content-Type" content="text/html" charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LMS Activation Email</title>
     <style type="text/css">
@@ -72,13 +72,25 @@
       </div>
       <div class="email-body">
         <p>Hello <%= user.name %></p>
-        <p>Thank you for registering With E-learning. To activate your account, please use the following activation code:</p>
+        <p>
+          Thank you for registering With E-learning. To activate your account,
+          please use the following activation code:
+        </p>
         <h2><%= activationCode %></h2>
-        <p>Please enter this code on the activation page within the next 5 nxnutes.</p>
-        <p>If you did not register for a E-learning account, please ignore this email.</p>
+        <p>
+          Please enter this code on the activation page within the next 5
+          nxnutes.
+        </p>
+        <p>
+          If you did not register for a E-learning account, please ignore this
+          email.
+        </p>
       </div>
       <div class="email-footer">
-        <p>If you have any questions, please don't hesitate to contact us at <a href="mailto:ahtisham_101@outlook.com">ahtisham_101@outlook.com</a></p>
+        <p>
+          If you have any questions, please don't hesitate to contact us at
+          <a href="mailto:ahtisham_101@outlook.com">ahtisham_101@outlook.com</a>
+        </p>
       </div>
     </div>
   </body>
